first working solution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
     "files.associations": {
-        "vector": "c",
-        "*.tcc": "c",
         "string": "c",
-        "unordered_map": "c",
-        "string_view": "c",
-        "queue.h": "c"
+        "tree.h": "c",
+        "*.zip": "c"
     }
 }
